Add model selection dropdown in header
Added model selection dropdown to header.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
 
     <!-- Header -->
     <header class="p-4 border-b border-gray-700 flex justify-between items-center bg-gray-850">
+      <!-- Dans la section header, après le modeSelect -->
+<select id="modelSelect" class="bg-gray-700 text-gray-200 p-2 rounded-md border border-gray-600 text-sm hidden">
+  <option value="Llama-3.2-1B-Instruct-q4f32_1-MLC">Llama 3.2 1B (Recommandé)</option>
+  <option value="TinyLlama-1.1B-Chat-v1.0-q4f32_1-MLC">TinyLlama 1.1B</option>
+  <option value="Llama-3.2-3B-Instruct-q4f32_1-MLC">Llama 3.2 3B</option>
+</select>
       <div class="flex items-center space-x-3">
         <div class="w-8 h-8 bg-blue-500 rounded-full flex items-center justify-center">
           <span class="text-white font-bold text-sm">AI</span>
